[package]
version = "0.1.0"
name = "ultrahonk-no-std"
authors = ["Horizen Labs <admin@horizenlabs.io>"]
repository = "https://github.com/zkVerify/ultrahonk_verifier"
homepage = "https://horizenlabs.io"
keywords = ["cryptography", "elliptic-curves", "pairing", "zk-SNARKs"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-bn254 = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
soroban-sdk = "25.1"

[dev-dependencies]
rstest = { version = "0.19.0", default-features = false }
soroban-sdk = { version = "25.1", features = ["testutils"] }

[features]
default = ["std"]
std = []